--- a/Style.css
+++ b/Style.css
@@ -33,7 +33,6 @@ body {
   background: #45a049;
 }
 
-
 .hamburger span {
   display: block;
   height: 3px;
@@ -82,6 +81,7 @@ body {
   width: 220px;
   align-items: flex-start;      
   justify-content: flex-start; 
+  padding-top: 60px;
   padding-left: 20px;
 }
 
@@ -163,12 +163,6 @@ section {
   margin-left: 200px;
 }
 
-
-
-
-
-
-
 /*kani structure design para blured ang background sa home og about*/
 #home {
   position: relative;
@@ -210,12 +204,7 @@ section {
 }
 
 #projects { background: #d0e1f9; }
-#contact { background: #fce4ec; }
-
-
-
-
-
+#contact { background: #fce4ec;}
 
 /* kani na structure design aron hamloy ang pag scroll */ 
 .scroll-button {
@@ -232,9 +221,6 @@ section {
   box-shadow: 0 2px 6px rgba(0,0,0,0.3);
   z-index: 1001;
 }
-
-
-
 
 /*kani na structure desgin para sa akoang main content*/
  body {
@@ -295,8 +281,6 @@ section {
         opacity: 0;
       }
     }
-
-
 
 
 /* kini na structure design para sa akoang mga image*/
@@ -363,7 +347,6 @@ section {
 .Social-Media a i:hover {
   color: #4b2ace; 
 }
-
 
 
 /*aron responsive sha*/
