--- a/Style.css
+++ b/Style.css
@@ -203,8 +203,44 @@ section {
   opacity: 0.9; 
 }
 
-#projects { background: #d0e1f9; }
-#contact { background: #fce4ec;}
+#projects {
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+
+#projects::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(image/wer.jpg) no-repeat center center/cover;
+  filter: blur(8px);
+  z-index: -1;
+  transform: scale(1.05); 
+  opacity: 0.9; 
+}
+#contact {
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+
+#contact::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(image/wer.jpg) no-repeat center center/cover;
+  filter: blur(8px);
+  z-index: -1;
+  transform: scale(1.05); 
+  opacity: 0.9; 
+}
 
 /* kani na structure design aron hamloy ang pag scroll */ 
 .scroll-button {
